--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "node server.js",
     "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
   },
+  "engines":{
+    "node":"12.19.0"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
